Fixing bag about rendering faster than getting data from api and changing the layout design.

--- a/app.json
+++ b/app.json
@@ -29,6 +29,11 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "8b6875fa-cc45-45d5-9f7f-466a69577f7f"
+      }
     }
   }
 }
