--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "expo": "~46.0.16",
     "expo-location": "~14.3.0",
     "expo-status-bar": "~1.4.0",
+    "expo-updates": "~0.14.6",
+    "moment": "^2.29.4",
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-geolocation-service": "^5.3.1",
